# guane-intern-fastapi

./: .env  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  docker-entrypoint.sh  requirements.txt  run_server.py  setup.cfg
app/: __init__.py  config.py  main.py
app/api/: api.py  deps.py
app/core/: celery_app.py
app/crud/: __init__.py  base.py  dog.py  superuser_crud.py  user.py  user_crud.py  web_crud.py
app/db/: base.py  db_manager.py  init_db.py  session.py
app/models/: __init__.py  base_class.py  dog.py  user.py
app/router/: dog.py
app/schemas/: __init__.py  base_config.py  dog.py  security.py  tasks.py  upload.py  user.py
app/services/: http_request.py
app/utils/: http_request.py  paths.py
app/worker/: celery_app.py  celery_tasks.py  tasks.py
mock_data/: db_test_data.py
scripts/: drop_all_db_tables.py  drop_all_test_db_tables.py
scripts/app/: rebuild_venv.sh  run_tests.py
scripts/db/: drop_all_db_tables.py  drop_all_test_db_tables.py
scripts/docker/: docker-entrypoint.sh  force-prune-build-reqs-build-docker.sh  force-prune-build.sh  prune-build.sh  rebuild-venv-force-prune-build.sh
scripts/server/: reset_rabbitmq.py  run_server.py
scripts/utils/: _celery.py  _manage_services.py  _postgres.py  _rabbitmq.py
tests/: conftest.py  utils.py
tests/app/: test_app.py  test_conf.py  test_main.py
tests/crud/: test_dog.py  test_dog_crud.py  test_user_crud.py
tests/mock/: db_session.py  db_tables.py  db_test_data.py  utils.py
tests/utils/: handle_db_test.py  parse_dict.py  security.py  uri.py
(+27 files in other folders)
