[metadata]
name = app
version = attr:app.VERSION
author = Juan Esteban Aristizabal-Zuluaga
author_email = jeaz.git@gmail.com
description = RESTful API project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jearistiz/guane-intern-fastapi/
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = .
